--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -20,7 +20,7 @@ header {
     padding: 16px 0;
 }
 
-header .navbar{
+header .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -179,33 +179,33 @@ header a:hover {
     gap: 16px;
 }
 
-.note{
+.note {
     padding: 100px 30px;
     text-align: center;
 }
 
-.note-content{
+.note-content {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.title h2{
+.title h2 {
     font-size: 48px;
     font-weight: 700;
     color: #001931;
     margin-bottom: 16px;
 }
 
-.text-16-px{
+.text-16-px {
     font-size: 16px;
     font-weight: 400;
     line-height: 20px;
     color: #627382;
 }
 
-.note-cards{
+.note-cards {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -213,7 +213,7 @@ header a:hover {
     margin-top: 48px;
 }
 
-.note-card{
+.note-card {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -224,13 +224,13 @@ header a:hover {
     box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.06);
 }
 
-.note-card h3{
+.note-card h3 {
     font-size: 24px;
     font-weight: 600;
     color: #001931;
 }
 
-.note-icon-wrapper{
+.note-icon-wrapper {
     width: 60px;
     height: 60px;
     background-color: #F95555;
@@ -240,18 +240,18 @@ header a:hover {
     border-radius: 99px;
 }
 
-.solution{
-    padding: 0px 30px 100px 30px;
+.solution {
+    padding: 0px 30px 120px 30px;
 }
 
-.solution-content{
+.solution-content {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 60px;
 }
 
-.label-green{
+.label-green {
     font-size: 16px;
     line-height: 20px;
     font-weight: 400;
@@ -260,30 +260,30 @@ header a:hover {
     margin-bottom: 16px;
 }
 
-.solution-image-wrapper{
+.solution-image-wrapper {
     width: 50%;
     max-width: 600px;
 }
 
-.solution-image-wrapper img{
+.solution-image-wrapper img {
     width: 100%;
     height: auto;
 }
 
-.solution-text-content{
+.solution-text-content {
     width: 50%;
     max-width: 700px;
 }
 
-.solution-text-content .title{
+.solution-text-content .title {
     max-width: 515px;
 }
 
-.solution-text-content .title p{
-max-width: 480px;
+.solution-text-content .title p {
+    max-width: 480px;
 }
 
-.solution-text-content ul{
+.solution-text-content ul {
     list-style: none;
     display: flex;
     flex-direction: column;
@@ -291,7 +291,7 @@ max-width: 480px;
     margin-top: 48px;
 }
 
-.solution-text-content ul li{
+.solution-text-content ul li {
     font-size: 16px;
     font-weight: 500;
     line-height: 20px;
@@ -301,3 +301,33 @@ max-width: 480px;
     gap: 6px;
 }
 
+.era{
+    padding: 0 30px 120px 30px;
+    text-align: center;
+}
+
+.era h2{
+    font-size: 40px;
+    font-weight: 700;
+    color: #001931;
+}
+
+.era-content{
+    padding: 80px 40px;
+    background-color: #F7F6F2;
+    border-radius: 12px;
+}
+
+.era-content .title p{
+    max-width: 580px;
+    margin: 0 auto;
+}
+
+.era-button-wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    margin-top: 24px;
+}
